# rusty-db

./: .gitignore  Cargo.toml  README.md  clippy.sh
cli/: Cargo.toml
cli/src/: main.rs
cli/src/serverless/: mod.rs
dbms/: Cargo.toml
dbms/src/: conversions.rs  lib.rs  persistence.rs  table.rs  tests_table.rs  types.rs  utils.rs
dbms/src/database/: mod.rs  tests.rs
dbms/src/evaluate/: mod.rs  tests.rs
dbms/src/execute/: mod.rs  tests.rs
dbms/src/persistence/: mod.rs  serialisation.rs  tests.rs
dbms/src/persistence/serialisation/: mod.rs  v1.rs  v1_tests.rs
dbms/src/persistence/serialisation/v1/: mod.rs  tests.rs
dbms/src/persistence/serialisation/v2/: mod.rs  tests.rs
dbms/src/serialisation/: mod.rs
dbms/src/serialisation/v1/: README.md  mod.rs  tests.rs
dbms/src/serialisation/v2/: README.md  mod.rs  tests.rs
dbms/src/server/: mod.rs
dbms/src/server/connection/: messages.rs  mod.rs  tests.rs
dbms/src/server/protocol/: README.md  header.rs  messages.rs  mod.rs  tests.rs
dbms/src/server/protocol/header/: mod.rs  tests.rs
dbms/src/server/protocol/messages/: mod.rs  tests.rs
dbms/src/table/: mod.rs  tests.rs
sql-parse/: Cargo.toml  README.md
sql-parse/src/: lexer.rs  lib.rs  primitives.rs
sql-parse/src/lexing/: chaining.rs  combinators.rs  grammar.rs  mod.rs  primitives.rs  tokens.rs
sql-parse/src/parser/: combinators.rs  expression_tests.rs  expressions.rs  mod.rs  primitives.rs  statement_tests.rs  statements.rs  utils.rs
sql-parse/src/parser/expressions/: mod.rs  tests.rs
sql-parse/src/parser/statements/: mod.rs  tests.rs
sql-parse/src/parsers/: chaining.rs  combinators.rs  glue.rs  grammar.rs  keywords.rs  mod.rs  primitives.rs
src/: main.rs
