[package]
name = "rusty-db"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A non-production-ready-and-will-never-be database written for my own learning purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace.dependencies]

[workspace]
members = [
    "sql-parse",
]
