[package]
name = "rusty-db"
version = "0.1.0"
edition = "2021"
description = "A non-production-ready-and-will-never-be database written for my own learning purposes"

[workspace.package]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true

sql-parse.workspace = true
dbms.workspace = true

[workspace.dependencies]
tokio = { version = "*", features = ["full"]}
tokio-test = { version = "*" }

sql-parse = { path = "./sql-parse", version = "0.1.0" }
dbms = { path = "./dbms", version = "0.1.0" }

[workspace]
members = ["cli"]
