[package]
name = "cli"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "CLI client for the database"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"]}

sql-parse.workspace = true
dbms.workspace = true
